syntax = "proto3";

service SerializerService {
  // Datasets
  rpc handle_missing_data_grpc(MissingDataRequest) returns (DatasetResponse);
  rpc applyable_models_grpc(ProblemRequest) returns (ModelsResponse);
  rpc parse_knowledge_file_grpc(KnowledgeFileRequest) returns (KnowledgeResponse);

  // Discovery
  rpc discover_with_model_grpc(DiscoverWithModelRequest) returns (DiscoveryResultResponse);
  rpc discover_with_all_models_grpc(DiscoverWithAllModelsRequest) returns (ProblemResponse);

  // Estimation
  rpc estimate_model_effects_grpc(EstimateModelEffectsRequest) returns (EstimationResultResponse);
  rpc estimate_all_effects_grpc(EstimateAllEffectsRequest) returns (ProblemResponse);

  // Refutation
  rpc refute_with_model_grpc(RefuteWithModelRequest) returns (RefutationResultResponse);
  rpc refute_all_results_grpc(RefuteAllResultsRequest) returns (ProblemResponse);


  // Results
  rpc generate_result_graph_grpc(GenerateResultGraphRequest) returns (GraphStringResponse);
  rpc generate_all_results_grpc(GenerateAllResultsRequest) returns (GraphStringResponse);
}

// MESSAGES
// Problem
message ProblemResponse {
  bytes problem = 1;
}

// --------------------------------------------
// Datasets
message MissingDataRequest {
  bytes dataset = 1;
  bytes missing_data_handling_method = 2;
}
message DatasetResponse {
  bytes dataset = 1;
}


message ProblemRequest {
  bytes problem = 1;
}
message ModelsResponse {
  repeated string model_names = 1;
}


message KnowledgeFileRequest {
  string file_path = 1;
}
message KnowledgeResponse {
  bytes knowledge = 1;
}

// --------------------------------------------
// Discovery
message DiscoverWithModelRequest {
  bytes problem = 1;
  string model = 2;
  bool verbose = 3;
  bool orient_toward_target = 4;
}
// response is the ProblemResponse


message DiscoverWithAllModelsRequest {
  bytes problem = 1;
  int32 max_seconds_model = 2;
  bool verbose = 3;
  int32 max_workers = 4;
  bool orient_toward_target = 5;
}
message DiscoveryResultResponse {
  bytes discovery_result = 1;
}

// --------------------------------------------
// Estimation
message EstimateAllEffectsRequest {
  bytes problem = 1;
  int32 max_seconds_model = 2;
  bool verbose = 3;
  int32 max_workers = 4;
}
// Response is the ProblemResponse


message EstimateModelEffectsRequest {
  bytes problem = 1;
  bytes discovery_result = 2;
  int32 timeout = 3;
}
message EstimationResultResponse {
  bytes estimation_result = 1;
}

// --------------------------------------------
// Refutation
message RefuteAllResultsRequest {
  bytes problem = 1;
  int32 max_seconds_global = 2;
  int32 max_seconds_model = 3;
  bool verbose = 4;
  int32 max_workers = 5;
}
// Response is the ProblemResponse

message RefuteWithModelRequest {
  bytes problem = 1;
  bytes estimation_result = 2;
  string model = 3;
}
message RefutationResultResponse {
  bytes refutation_result = 1;
}

// --------------------------------------------
// Results

message GenerateResultGraphRequest {
  bytes discovery_result = 1;
  bytes problem = 2;
  string layout_option = 3;
}

message GenerateAllResultsRequest {
  bytes problem = 1;
  string layout_option = 2;
}

message GraphStringResponse {
  string graph_string = 1;  // textual graph representation (e.g. DOT, JSON, etc.)
}


